--- a/webfonts.css
+++ b/webfonts.css
@@ -20,6 +20,16 @@
  * Webfont: TrasandinaBook-Italic by TipoType
  * URL: http://www.myfonts.com/fonts/tipotype/trasandina/book-italic/
  * 
+ * Webfont: Detroit10Inline by Match & Kerosene
+ * URL: http://www.myfonts.com/fonts/matchandkerosene/detroit/10/
+ * 
+ * Webfont: Detroit05Base by Match & Kerosene
+ * URL: http://www.myfonts.com/fonts/matchandkerosene/detroit/5/
+ * 
+ * 
+ * License: http://www.myfonts.com/viewlicense?type=web&buildid=3063081
+ * Licensed pageviews: 10,000
+ * Webfonts copyright: Copyright (c) 2011 by Alex Sheldon for Match and Kerosene. All rights reserved.
  * 
  * License: http://www.myfonts.com/viewlicense?type=web&buildid=3063064
  * Licensed pageviews: 10,000
@@ -30,6 +40,13 @@
 
 
 /* @import must be at top of file, otherwise CSS will not work */
+
+@import url("//hello.myfonts.net/count/2ebd29");
+
+  
+@font-face {font-family: 'Detroit10Inline';src: url('webfonts/2EBD29_0_0.eot');src: url('webfonts/2EBD29_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2EBD29_0_0.woff2') format('woff2'),url('webfonts/2EBD29_0_0.woff') format('woff'),url('webfonts/2EBD29_0_0.ttf') format('truetype');}
+ 
+
 @import url("//hello.myfonts.net/count/2ebd18");
 
   
@@ -38,7 +55,7 @@
   
 @font-face {font-family: 'TrasandinaLight';src: url('webfonts/2EBD18_1_0.eot');src: url('webfonts/2EBD18_1_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2EBD18_1_0.woff2') format('woff2'),url('webfonts/2EBD18_1_0.woff') format('woff'),url('webfonts/2EBD18_1_0.ttf') format('truetype');}
  
-  
+
 @font-face {font-family: 'TrasandinaBlack';src: url('webfonts/2EBD18_2_0.eot');src: url('webfonts/2EBD18_2_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2EBD18_2_0.woff2') format('woff2'),url('webfonts/2EBD18_2_0.woff') format('woff'),url('webfonts/2EBD18_2_0.ttf') format('truetype');}
  
   
