--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ section {
 }
 
 .largeHeader {
-  font-family: 'Detroit 10 Inline', 'Knockout';
+  font-family: 'Detroit10Inline', 'Open Sans', Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-size: 84px;
   line-height: 1.05;
@@ -103,7 +103,7 @@ section {
   display: inline-block;
   margin-bottom: 6px;
   color: #9ff495;
-  font-family: 'Detroit 10 Inline', 'TrasandinaBold', sans-serif;
+  font-family: 'Detroit10Inline', 'Open Sans', Helvetica, Arial, sans-serif;
   font-size: 38px;
   font-weight: 500;
   letter-spacing: -0.05em;
@@ -166,7 +166,7 @@ section {
   padding: 80px 0;
   font-size: 80px;
   color: #fff;
-  font-family: 'Detroit 10 Inline', 'TrasandinaLight', sans-serif;
+  font-family: 'Detroit10Inline', 'Open Sans', Helvetica, Arial, sans-serif;
   letter-spacing: 0.01em;
   background-image: url('img/sunset_RavMonE.png');
   background size: 1200px auto;
