--- a/css/ss-symbolicons-block.css
+++ b/css/ss-symbolicons-block.css
@@ -12,11 +12,11 @@
 
 @font-face {
   font-family: "SSSymbolicons";
-  src: url('ss-symbolicons-block.eot');
-  src: url('ss-symbolicons-block.eot?#iefix') format('embedded-opentype'),
-       url('ss-symbolicons-block.woff') format('woff'),
-       url('ss-symbolicons-block.ttf')  format('truetype'),
-       url('ss-symbolicons-block.svg#SSSymboliconsBlock') format('svg');
+  src: url('../fonts/ss-symbolicons-block.eot');
+  src: url('../fonts/ss-symbolicons-block.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/ss-symbolicons-block.woff') format('woff'),
+       url('../fonts/ss-symbolicons-block.ttf')  format('truetype'),
+       url('../fonts/ss-symbolicons-block.svg#SSSymboliconsBlock') format('svg');
   font-weight: normal;
   font-style: normal;
 }
