--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
   top: 2230px;
   right: 0;
 
-  background-image: url('img/code-shape-1.png');
+  background-image: url('../img/code-shape-1.png');
   background-size: cover;
 }
 
@@ -21,7 +21,7 @@
   top: 300px;
   left: 0;
 
-  background-image: url('img/code-shape-2.png');
+  background-image: url('../img/code-shape-2.png');
   background-size: cover;
 }
 
@@ -31,7 +31,7 @@
   top: 2025px;
   left: calc(50% - 360px);
 
-  background-image: url('img/code-usa.png');
+  background-image: url('../img/code-usa.png');
   background-size: cover;
 }
 
@@ -63,7 +63,7 @@ section {
 .hero {
   width: 100%;
   height: 460px;
-  background-image: url('img/birdseye_ILOVEYOU.png');
+  background-image: url('../img/birdseye_ILOVEYOU.png');
   background-size: cover;
 }
 
@@ -81,8 +81,8 @@ section {
 }
 
 .hero__largeHeader {
-  margin: 67px auto;
-  padding: 30px 20px 40px 20px;
+  margin: 64px auto;
+  padding: 30px 20px 48px 20px;
   width: 640px;
   color: #fff;
   letter-spacing: 0.01em;
@@ -163,12 +163,14 @@ section {
 }
 
 .section__content-quote--jumbotron {
-  padding: 80px 0;
-  font-size: 80px;
+  padding: 80px 0 100px 0;
   color: #fff;
   font-family: 'Detroit10Inline', 'Open Sans', Helvetica, Arial, sans-serif;
+  font-size: 80px;
   letter-spacing: 0.01em;
-  background-image: url('img/sunset_RavMonE.png');
+  line-height: 1;
+
+  background-image: url('../img/sunset_RavMonE.png');
   background size: 1200px auto;
   background-position: center -100px;
 }
@@ -296,6 +298,9 @@ section {
   color: #1d128e;
 }
 
+.hideme {
+  opacity:0;
+}
 
 
 
