--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,17 @@ section {
   margin: 0 auto;
 }
 
+a, a:visited {
+  color: #2cf415;
+  color: #21e50b;
+  -webkit-transition: all .25s ease;
+  transition: all .25s ease;
+}
+
+a:hover {
+  color: #1dc809;
+}
+
 .hero {
   width: 100%;
   height: 460px;
@@ -186,6 +197,13 @@ section {
   font-size: 48px;
 }
 
+.section__quote-attribution {
+  display: inline-block;
+  margin-top: 12px;
+  font-family: 'TrasandinaLight', 'Open Sans', Helvetica, Arial, sans-serif;
+  font-size: 17px;
+}
+
 .section__content--centered .section__content-quote {
   margin-top: 50px;
   padding-left: 150px;
@@ -260,7 +278,7 @@ section {
 }
 
 .bg__code-shape--right {
-  top: 2230px;
+  top: 2160px;
   right: 0;
 
   background-image: url('../img/code-shape-1.png');
