--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a:hover {
   width: 100%;
   height: 460px;
 
-  background-image: url('../img/birdseye_ILOVEYOU.png');
+  background-image: url('../img/birdseye_ILOVEYOU.jpg');
   background-size: cover;
 }
 
